--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,9 +29,11 @@ jobs:
               run: |
                   npm ci
                   npm run build --if-present
+              env:
+                  CI: ""
             - name: deploy to gh-pages
               uses: peaceiris/actions-gh-pages@v3
               with:
                   github_token: ${{ secrets.GITHUB_TOKEN }}
                   publish_branch: gh-pages
-                  publish_dir: ./frontend/build
+                  publish_dir: ./build
